force-app/main/default/objects/Call_Center_Skill__c/Call_Center_Skill__c.object-meta.xml
<CustomObject>
    <label>Call Center - Skill</label>
    <nameField>
        <label>Skill Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Call Center - Skills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>