force-app/main/default/objects/Call_Center_Skill__c/fields/Closed_3rd_Party_DNIS__c.field-meta.xml
<CustomField>
    <fullName>Closed_3rd_Party_DNIS__c</fullName>
    <label>Closed 3rd Party DNIS</label>
    <type>Phone</type>
</CustomField>