force-app/main/default/objects/Call_Center_Skill__c/fields/Closed_Redirect_Extension__c.field-meta.xml
<CustomField>
    <fullName>Closed_Redirect_Extension__c</fullName>
    <label>Closed Redirect Extension</label>
    <length>4</length>
    <type>Text</type>
</CustomField>