force-app/main/default/objects/Call_Center_Skill__c/fields/Emergency_Redirect_Extension__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Redirect_Extension__c</fullName>
    <label>Emergency Redirect Extension</label>
    <length>4</length>
    <type>Text</type>
</CustomField>