force-app/main/default/objects/Call_Center_Skill__c/fields/Friday_Open__c.field-meta.xml
<CustomField>
    <fullName>Friday_Open__c</fullName>
    <label>Friday Open</label>
    <type>Time</type>
</CustomField>