force-app/main/default/objects/Call_Center_Skill__c/fields/Holiday_Redirect_Extension__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Redirect_Extension__c</fullName>
    <label>Holiday Redirect Extension</label>
    <length>4</length>
    <type>Text</type>
</CustomField>