force-app/main/default/objects/Call_Center_Skill__c/fields/Holiday_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Holiday Schedule</label>
    <referenceTo>Holiday_Schedule__c</referenceTo>
    <relationshipLabel>Call Center - Skills</relationshipLabel>
    <relationshipName>Call_Center_Skills</relationshipName>
    <type>Lookup</type>
</CustomField>