force-app/main/default/objects/Call_Center_Skill__c/fields/Holiday_Treatment_Type__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Treatment_Type__c</fullName>
    <label>Holiday Treatment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closed Message</fullName>
            </value>
            <value>
                <fullName>Redirect</fullName>
            </value>
            <value>
                <fullName>Voicemail</fullName>
            </value>
            <value>
                <fullName>3rd Party Transfer</fullName>
            </value>
            <value>
                <fullName>Please press 1 for service in English, or press 2 to leave a voicemail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>