force-app/main/default/objects/Call_Center_Skill__c/fields/Queue_Greeting_Message__c.field-meta.xml
<CustomField>
    <fullName>Queue_Greeting_Message__c</fullName>
    <label>Queue Greeting Message</label>
    <type>TextArea</type>
</CustomField>