force-app/main/default/objects/Call_Center_Skill__c/fields/Screen_Pop_Call_Log_Record__c.field-meta.xml
<CustomField>
    <fullName>Screen_Pop_Call_Log_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Screen Pop (Call Log Record)</label>
    <type>Checkbox</type>
</CustomField>