force-app/main/default/objects/Call_Center_Skill__c/fields/Survey__c.field-meta.xml
<CustomField>
    <fullName>Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Survey</label>
    <type>Checkbox</type>
</CustomField>